 * User interface:
   * Draw gold hex cursor above all terrain when no unit visible
 * WML engine:
   * Improve [select_unit] to match its original intention (bug #19224)
   * Improve error handling in case of invalid maps passed to
     [replace_map] or [terrain_mask]
   * Disable wml menu items in linger mode without debug mode (bug #16262)
 * Whiteboard:
   * Fixed bug #19221 : Assert when a whiteboard move-attack wins a scenario
   * Fixed bug #19142 : attacks can be simulated between units (for which this
     shouldn't be possible)
 * Miscellaneous and bug fixes:
   * Fixed wmlindent writing CRLF end of lines on windows
   * Fix tutorial units without xp bar
   * Reset game credits instead of appending on WML cache refresh (bug #19292)
   * Fix wmllint check for "unknown xy referred to by id" not working

Version 1.9.14:
 * AI:
   * Fixed bug #18962 and bug #19214: AI leaders are no longer slow to select
     attacks.
 * Campaigns:
   * Sceptre of Fire:
     * New set of portraits
 * Editor:
   * Fixed overpainting of transparent tile icons on the editor palettes on the
     sidebar
   * Fixed terrain palette shrinking to the size of small categories when
     switching maps (bug #19218)
   * Fixed various crashes related to drawing/filling operations (bug #18928)
 * Language and i18n:
   * Changed font used for CJK languages to DroidSans
   * Updated translations: British English, Chinese (Simplified), Czech, Dutch,
     Estonian, French, Galician, German, Hungarian, Latin, Norwegian, Serbian,
     Slovak, Spanish
 * WML engine:
   * Fix store_unit clearing the used variable before its filter can reference it
     (bug #19203)
   * Check for argument image file existence before creating a MASK or
     BLIT image mod (bug #19208)
   * New key [object]delayed_variable_substitution=yes|no (default no)
     as a workaround for bug #18893 (fixes bug #19225)
   * Made empty {} preprocessor directives be handled more gracefully
     (bug #19233)