@@ -23,6 +23,7 @@ Version 1.9.14+svn:
      turn time runs out in attack selection dialog.
      
  * Whiteboard:
+   * Fixed bug #19222 : After 'delete planned action', the unit is almost invisible
    * Fixed bug #19221 : Assert when a whiteboard move-attack wins a scenario
    * Fixed bug #19142 : attacks can be simulated between units (for which this
      shouldn't be possible)
