@@ -49,7 +49,7 @@ public:
 	virtual void execute(bool& success, bool& complete);
 
 	/** Return the unit targeted by this action. Null if unit doesn't exist. */
-	virtual unit* get_unit() const { return unit_; }
+	virtual unit* get_unit() const;
 	/** @return pointer to the fake unit used only for visuals */
 	virtual fake_unit_ptr get_fake_unit() { return fake_unit_; }
 
@@ -95,7 +95,7 @@ protected:
 
 	void calculate_move_cost();
 
-	unit* unit_;
+	size_t unit_underlying_id_;
 	std::string unit_id_;
 	boost::scoped_ptr<pathfind::marked_route> route_;
 	int movement_cost_;
