@@ -44,6 +44,7 @@ Version 1.9.14+svn:
      [replace_map] or [terrain_mask]
    * Disable wml menu items in linger mode without debug mode (bug #16262)
  * Whiteboard:
+   * Fixed bug #19222 : After 'delete planned action', the unit is almost invisible
    * Fixed bug #19221 : Assert when a whiteboard move-attack wins a scenario
    * Fixed bug #19142 : attacks can be simulated between units (for which this
      shouldn't be possible)
